Make machine access explicit by Space (#10)
